--- a/index.html
+++ b/index.html
@@ -35,66 +35,30 @@
   <script src="Ltb_Drugscape.js"></script>
 
   <link rel="stylesheet" type="text/css" href="Ltb_Drugscape.css">
-  <style>
-    /* Basic styling for the pop-up */
-    #questionPopup {
-        display: none; /* Hidden by default */
-        position: fixed;
-        z-index: 100;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        background-color: white;
-        border: 2px solid #ccc;
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-    #popupOverlay {
-        display: none; /* Hidden by default */
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        z-index: 99;
-    }
-    #custom-alert {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    z-index: 1000;
-    }
-    #alert-overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.5);
-        z-index: 999;
-    }
-    .alert-button {
-        margin-top: 10px;
-        padding: 5px 15px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-</style>
+
   
 </head>
 
 <body>
+
+    <div class="modal-overlay" id="instructionModal">
+        <div class="modal">
+            <h2>Welcome!</h2>
+            <p>Click on the door to begin your journey.</p>
+            <button class="close-button" onclick="closeModal()">Got it!</button>
+        </div>
+    </div>
+    <script>
+        // Show modal when page loads
+        window.onload = function() {
+            document.getElementById('instructionModal').style.display = 'flex';
+        };
+
+        // Function to close the modal
+        function closeModal() {
+            document.getElementById('instructionModal').style.display = 'none';
+        }
+    </script>
   <div id="v3d-container">
     <div id="fullscreen-button" class="fullscreen-button fullscreen-open" title="Toggle fullscreen mode"></div>
   </div>
