--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="modal-overlay" id="instructionModal">
         <div class="modal">
-            <h2>Welcome!</h2>
+            <h2>Welcome to Drugscape!</h2>
             <p>Click on the door to begin your journey.</p>
             <button class="close-button" onclick="closeModal()">Got it!</button>
         </div>
@@ -63,23 +63,6 @@
     <div id="fullscreen-button" class="fullscreen-button fullscreen-open" title="Toggle fullscreen mode"></div>
   </div>
 
-  <div id="alert-overlay"></div>
-    <div id="custom-alert">
-        <p>Welcome to Drugscape! Engage in this meaningful journey as you play a part in being a healthy and responsible person! If you are ready to take on this challenge, click on the nearest door to start!</p>
-        <button class="alert-button" onclick="closeCustomAlert()">OK</button>
-    </div>
-
-    <script>
-      function showCustomAlert() {
-          document.getElementById('custom-alert').style.display = 'block';
-          document.getElementById('alert-overlay').style.display = 'block';
-      }
-  
-      function closeCustomAlert() {
-          document.getElementById('custom-alert').style.display = 'none';
-          document.getElementById('alert-overlay').style.display = 'none';
-      }
-  </script>
 
 
 <div id="popupOverlay"></div>
