--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 
-<div id="popupOverlay"></div>
+<!-- <div id="popupOverlay"></div>
 <div id="questionPopup">
     <h2 id="questionText">Question will go here</h2>
     <div id="optionsContainer"></div>
@@ -85,7 +85,7 @@
     <div id="question-text">Please enter your answer:</div>
     <input type="text" id="user-answer" placeholder="Type your answer here">
     <button id="submit-answer">Submit Answer</button>
-</div>
+</div> -->
 
 
 <!-- <script >
